--- a/frontend/blank.html
+++ b/frontend/blank.html
@@ -20,7 +20,7 @@
   <h2>Dashboards existentes</h2>
   <div id="dashboardsList"></div>
 
-  <script src="assets/js/script.js"></script>
-  <script src="./js/verifylogin.js"></script>
+  <script src="../frontend/js/script.js"></script>
+  <script src="../frontend/js/verifylogin.js"></script>
 </body>
 </html>
