--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -20,7 +20,8 @@
   <h2>Proyectos</h2>
   <div id="projectList"></div>
 
-  <script src="assets/js/dashboard.js"></script>
-  <script src="./js/verifylogin.js"></script>
+  <script src="../frontend/js/dashboard.js"></script>
+  <script src="../frontend/js/script.js"></script>
+  <script src="../frontend/js/verifylogin.js"></script>
 </body>
 </html>
