--- a/index.html
+++ b/index.html
@@ -5,379 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Comunidad de Proyectos IT</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-  <style>
-    :root {
-      --primary: #22c55e;
-      --secondary: #166534;
-      --background: #f8fafc;
-      --muted: #f1f5f9;
-      --text: #1e293b;
-      --white: #fff;
-      --gray: #64748b;
-      --accent: #a3e635;
-      --shadow: 0 8px 32px 0 rgba(34,197,94,0.18);
-    }
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Arial, sans-serif;
-      background: var(--background);
-      color: var(--text);
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-    header {
-      position: sticky;
-      top: 0;
-      z-index: 40;
-      width: 100%;
-      border-bottom: 1px solid #e5e7eb;
-      background: var(--background);
-    }
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 1.5rem;
-    }
-    .header-content {
-      display: flex;
-      height: 4rem;
-      align-items: center;
-      justify-content: space-between;
-      border-radius: 1.5rem;
-      box-shadow: var(--shadow);
-      margin-top: 1.2rem;
-      background: rgba(255,255,255,0.85);
-      backdrop-filter: blur(2px);
-    }
-    .logo {
-      font-size: 1.7rem;
-      font-weight: bold;
-      color: var(--primary);
-      text-decoration: none;
-      letter-spacing: -1px;
-      text-shadow: 0 2px 8px rgba(34,197,94,0.15);
-      transition: transform 0.2s;
-    }
-    .logo:hover {
-      transform: scale(1.07) rotate(-2deg);
-      color: var(--accent);
-    }
-    nav {
-      display: flex;
-      align-items: center;
-      gap: 1.5rem;
-    }
-    nav a {
-      color: var(--text);
-      text-decoration: none;
-      font-size: 1rem;
-      font-weight: 500;
-      transition: color 0.2s;
-    }
-    nav a:hover {
-      text-decoration: underline;
-      color: var(--primary);
-    }
-    .header-actions {
-      display: flex;
-      gap: 0.5rem;
-    }
-    .btn {
-      padding: 0.5em 1.2em;
-      border-radius: 0.375em;
-      border: none;
-      font-size: 1rem;
-      font-weight: 500;
-      cursor: pointer;
-      transition: background 0.2s, color 0.2s, border 0.2s;
-      text-decoration: none;
-      display: inline-block;
-      box-shadow: 0 2px 8px rgba(34,197,94,0.10);
-      position: relative;
-      overflow: hidden;
-    }
-    .btn:after {
-      content: '';
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      width: 0;
-      height: 0;
-      background: rgba(163,230,53,0.2);
-      border-radius: 100%;
-      transform: translate(-50%, -50%);
-      transition: width 0.4s, height 0.4s;
-      z-index: 0;
-    }
-    .btn:hover:after {
-      width: 200%;
-      height: 500%;
-    }
-    .btn:hover {
-      z-index: 1;
-      filter: brightness(1.08);
-      transform: translateY(-2px) scale(1.04);
-    }
-    .btn-primary {
-      background: var(--primary);
-      color: var(--white);
-    }
-    .btn-primary:hover {
-      background: var(--secondary);
-      color: var(--white);
-    }
-    .btn-outline {
-      background: transparent;
-      color: var(--primary);
-      border: 2px solid var(--primary);
-    }
-    .btn-outline:hover {
-      background: var(--primary);
-      color: var(--white);
-    }
-    main {
-      flex: 1;
-    }
-    /* Hero Section */
-    .hero {
-      width: 100%;
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: linear-gradient(135deg, #166534 0%, #22c55e 100%);
-      color: var(--white);
-      text-align: center;
-      position: relative;
-      overflow: hidden;
-    }
-    /* SVG Blobs decorativos */
-    .hero-blob {
-      position: absolute;
-      z-index: 0;
-      opacity: 0.18;
-      pointer-events: none;
-    }
-    .hero-blob.blob1 {
-      left: -120px;
-      top: -120px;
-      width: 350px;
-      height: 350px;
-    }
-    .hero-blob.blob2 {
-      right: -100px;
-      bottom: -100px;
-      width: 300px;
-      height: 300px;
-    }
-    .hero h1 {
-      font-size: 4rem;
-      line-height: 1.1;
-      letter-spacing: -2px;
-      text-align: center;
-      background: linear-gradient(90deg, var(--accent), var(--white), var(--primary));
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-      text-fill-color: transparent;
-      filter: drop-shadow(0 2px 8px rgba(34,197,94,0.10));
-      opacity: 0;
-      transform: scale(0.7) rotate(-8deg);
-      animation: zoomInRotate 1.2s cubic-bezier(.68,-0.55,.27,1.55) 0.2s forwards;
-    }
-    @media (min-width: 600px) {
-      .hero h1 {
-        font-size: 5.5rem;
-      }
-    }
-    @keyframes zoomInRotate {
-      0% { opacity: 0; transform: scale(0.7) rotate(-8deg); }
-      60% { opacity: 1; transform: scale(1.08) rotate(4deg); }
-      100% { opacity: 1; transform: scale(1) rotate(0deg); }
-    }
-    @keyframes typing {
-      from { width: 0 }
-      to { width: 100% }
-    }
-    @keyframes blink-caret {
-      from, to { border-color: transparent }
-      50% { border-color: var(--accent); }
-    }
-    @keyframes bounceIn {
-      0% { transform: scale(1); }
-      20% { transform: scale(1.08) translateY(-8px); }
-      40% { transform: scale(0.98) translateY(4px); }
-      60% { transform: scale(1.04) translateY(-4px); }
-      80% { transform: scale(0.98) translateY(2px); }
-      100% { transform: scale(1) translateY(0); }
-    }
-    .hero p {
-      font-size: 1.25rem;
-      margin-bottom: 2rem;
-      max-width: 700px;
-      margin-left: auto;
-      margin-right: auto;
-      background: rgba(255,255,255,0.10);
-      border-radius: 1em;
-      padding: 1em 1.5em;
-      box-shadow: 0 2px 12px rgba(34,197,94,0.08);
-    }
-    .hero-actions {
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-      flex-wrap: wrap;
-    }
-    .hero .btn {
-      font-size: 1.1rem;
-      padding: 0.75em 2em;
-    }
-    .btn-white {
-      background: var(--white);
-      color: var(--primary);
-      border: none;
-    }
-    .btn-white:hover {
-      background: #e0e7ef;
-      color: var(--primary);
-    }
-    .btn-outline-white {
-      background: transparent;
-      color: var(--white);
-      border: 2px solid var(--white);
-    }
-    .btn-outline-white:hover {
-      background: var(--white);
-      color: var(--primary);
-    }
-    /* Features Section */
-    .features {
-      background: var(--muted);
-      padding: 3rem 0;
-    }
-    .features-title {
-      text-align: center;
-      font-size: 2rem;
-      font-weight: bold;
-      margin-bottom: 0.5rem;
-    }
-    .features-desc {
-      text-align: center;
-      color: var(--gray);
-      margin-bottom: 2.5rem;
-      font-size: 1.1rem;
-    }
-    .features-grid {
-      display: grid;
-      gap: 2rem;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      max-width: 1100px;
-      margin: 0 auto;
-    }
-    .feature-card {
-      background: var(--white);
-      border-radius: 0.75em;
-      box-shadow: 0 4px 24px rgba(34,197,94,0.10);
-      padding: 2rem 1.5rem;
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 260px;
-      transition: transform 0.18s, box-shadow 0.18s;
-    }
-    .feature-card:hover {
-      transform: translateY(-6px) scale(1.04) rotate(-1deg);
-      box-shadow: 0 8px 32px rgba(34,197,94,0.18);
-    }
-    .feature-card i {
-      font-size: 2.5rem;
-      color: var(--primary);
-      margin-bottom: 1rem;
-      filter: drop-shadow(0 2px 8px rgba(34,197,94,0.10));
-      transition: color 0.2s, transform 0.2s;
-    }
-    .feature-card:hover i {
-      color: var(--accent);
-      transform: scale(1.15) rotate(6deg);
-    }
-    .feature-title {
-      font-size: 1.2rem;
-      font-weight: bold;
-      margin-bottom: 0.5rem;
-    }
-    .feature-desc {
-      color: var(--gray);
-      font-size: 1rem;
-    }
-    /* Join Section */
-    .join {
-      background: var(--white);
-      padding: 3rem 0;
-      text-align: center;
-      border-radius: 2em 2em 0 0;
-      box-shadow: 0 -2px 16px rgba(34,197,94,0.08);
-    }
-    .join-title {
-      font-size: 2rem;
-      font-weight: bold;
-      margin-bottom: 0.5rem;
-    }
-    .join-desc {
-      color: var(--gray);
-      margin-bottom: 2rem;
-      font-size: 1.1rem;
-    }
-    .join-actions {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      align-items: center;
-      justify-content: center;
-    }
-    @media (min-width: 600px) {
-      .join-actions {
-        flex-direction: row;
-      }
-    }
-    /* Footer */
-    footer {
-      border-top: 1px solid #e5e7eb;
-      background: var(--muted);
-      padding: 1.5rem 0;
-      text-align: center;
-      font-size: 0.95rem;
-      color: var(--gray);
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
-      align-items: center;
-    }
-    .footer-nav {
-      display: flex;
-      gap: 1.5rem;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-    .footer-nav a {
-      color: var(--gray);
-      text-decoration: none;
-      font-size: 0.95rem;
-      transition: color 0.2s;
-    }
-    .footer-nav a:hover {
-      color: var(--primary);
-      text-decoration: underline;
-    }
-  </style>
+  <link rel="stylesheet" href="frontend/css/base/index.css">
 </head>
 <body>
   <div class="flex flex-col min-h-screen bg-background">
     <!-- Header -->
     <header>
       <div class="container header-content">
-        <a href="#" class="logo">Comunidad de Proyectos IT</a>
+        <a href="#" class="logo">HackDash</a>
         <nav class="nav-desktop">
           <a href="#features">Beneficios</a>
           <a href="#projects">Explorar Proyectos</a>
