pequenos cambios front

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -14,7 +14,7 @@
 <body>
     <div class="login-container">
         <div class="login-logo">
-            <img src="../assets/kreativenofondo.png" alt="Logo" class="avatar">
+            <img src="../assets/hackdashlogo.png" alt="Logo" class="avatar">
         </div>
 
         <h1>Iniciar sesión</h1>
