--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -214,6 +214,33 @@
       height: 20px;
     }
 
+    .progress-bar {
+      width: 100%;
+      height: 6px;
+      background-color: #e5e7eb;
+      border-radius: 3px;
+      margin-top: 0.75rem;
+      overflow: hidden;
+    }
+
+    .progress-fill {
+      height: 100%;
+      background-color: #10b981;
+      border-radius: 3px;
+      transition: width 0.3s ease;
+    }
+
+    .project-progress {
+      margin: 1rem 0;
+    }
+
+    .progress-text {
+      font-size: 0.8rem;
+      color: #6b7280;
+      margin-top: 0.25rem;
+      display: block;
+    }
+
     .search-box {
       margin-bottom: 1.5rem;
     }
@@ -249,6 +276,13 @@
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
       border: 1px solid #e2e8f0;
       position: relative;
+      cursor: pointer;
+      transition: all 0.2s ease;
+    }
+
+    .project-card:hover {
+      box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+      transform: translateY(-2px);
     }
 
     .project-header {
