--- a/index.html
+++ b/index.html
@@ -401,13 +401,12 @@
         </svg>
         <div class="container">
           <div class="max-w-3xl mx-auto space-y-4">
-            <h1>Conecta, Colabora, Crea.</h1>
+            <h1>Hackdash: Gestión de Proyectos IT</h1>
             <p>
-              Únete a una vibrante comunidad de desarrolladores. Encuentra y contribuye a proyectos informáticos de código abierto, o inicia el tuyo propio.
+              Plataforma moderna para gestionar proyectos de desarrollo. Organiza tareas, colabora con tu equipo y visualiza el progreso en tiempo real.
             </p>
             <div class="hero-actions">
-              <a href="signup.html" class="btn btn-white">Explorar Proyectos</a>
-              <a href="frontend/login.html" class="btn btn-outline-white">Iniciar Sesión</a>
+              <a href="frontend/login.html" class="btn btn-white">Iniciar dashboard</a>
             </div>
           </div>
         </div>
@@ -416,30 +415,30 @@
       <!-- Features Section -->
       <section id="features" class="features">
         <div class="container">
-          <div class="features-title">¿Por qué unirte a nuestra comunidad?</div>
+          <div class="features-title">¿Qué ofrece Hackdash?</div>
           <div class="features-desc">
-            Ofrecemos las herramientas y el entorno para que tus ideas cobren vida.
+            Una plataforma completa para la gestión de proyectos de desarrollo con herramientas modernas y colaborativas.
           </div>
           <div class="features-grid">
             <div class="feature-card">
-              <i class="fas fa-users"></i>
-              <div class="feature-title">Comunidad Activa</div>
-              <div class="feature-desc">Conecta con desarrolladores de todos los niveles y comparte conocimientos.</div>
+              <i class="fas fa-tasks"></i>
+              <div class="feature-title">Gestión de Tareas</div>
+              <div class="feature-desc">Crea, edita y organiza tareas con estados personalizables y seguimiento de progreso en tiempo real.</div>
             </div>
             <div class="feature-card">
-              <i class="fas fa-code"></i>
-              <div class="feature-title">Proyectos Diversos</div>
-              <div class="feature-desc">Desde IA hasta Blockchain, encuentra proyectos que se ajusten a tus intereses.</div>
+              <i class="fas fa-chart-line"></i>
+              <div class="feature-title">Dashboard Intuitivo</div>
+              <div class="feature-desc">Visualiza el progreso de tus proyectos con barras de progreso y estadísticas detalladas.</div>
             </div>
             <div class="feature-card">
-              <i class="fas fa-handshake"></i>
-              <div class="feature-title">Colaboración Sencilla</div>
-              <div class="feature-desc">Herramientas integradas para una gestión de proyectos fluida y efectiva.</div>
+              <i class="fas fa-users-cog"></i>
+              <div class="feature-title">Colaboración en Equipo</div>
+              <div class="feature-desc">Invita miembros, asigna tareas y mantén comunicación fluida con tu equipo de desarrollo.</div>
             </div>
             <div class="feature-card">
-              <i class="fas fa-lightbulb"></i>
-              <div class="feature-title">Aprende y Crece</div>
-              <div class="feature-desc">Participa en proyectos reales y expande tus habilidades técnicas.</div>
+              <i class="fas fa-folder-open"></i>
+              <div class="feature-title">Gestión de Archivos</div>
+              <div class="feature-desc">Sube y organiza archivos del proyecto con un sistema de gestión integrado y accesible.</div>
             </div>
           </div>
         </div>
@@ -448,13 +447,13 @@
       <!-- Call to Action Section -->
       <section id="join" class="join">
         <div class="container">
-          <div class="join-title">¿Listo para ser parte de la comunidad?</div>
+          <div class="join-title">¿Listo para optimizar tu gestión de proyectos?</div>
           <div class="join-desc">
-            Regístrate hoy y comienza a explorar, colaborar y crear.
+            Accede a Hackdash y comienza a organizar tus proyectos de desarrollo de manera eficiente.
           </div>
           <div class="join-actions">
-            <a href="signup.html" class="btn btn-primary">Únete Ahora</a>
-            <a href="projects.html" class="btn btn-outline">Ver Proyectos (Demo)</a>
+            <a href="frontend/login.html" class="btn btn-primary">Acceder a Hackdash</a>
+            <a href="frontend/blank.html" class="btn btn-outline">Ver Dashboards</a>
           </div>
         </div>
       </section>
